# AIE8-certification-challenge

./: .dockerignore  .gitignore  GETTING_STARTED.md  MODULAR_ARCHITECTURE.md  QUICK_REFERENCE.md  README.md  RETRIEVER_IMPLEMENTATION_SUMMARY.md  docker-compose.yml  main.py  pyproject.toml  start.sh  todo.txt
backend/: .env.example  Dockerfile  RAG_SETUP.md  architecture.mmd  mermaid-config.json  pyproject.toml  run.sh  test_agentic_system.ipynb  test_check_vectorstore.py  test_langgraph.py  test_modular.py  test_notebook_parser.py  test_retrievers.py
backend/app/: check_rag.ipynb  config.py  main.py
backend/app/agents/: __init__.py  base_agent.py  review_controller_langgraph.py
backend/app/models/: schemas.py
backend/app/prompts/: __init__.py
backend/app/retrievers/: README.md  __init__.py  builder.py  config_helper.py  qdrant_retriever.py  registry.py  types.py
backend/app/routers/: review.py
backend/app/scripts/: __init__.py  clear_and_reupload_with_semantic.py  upload_guidelines.py
backend/app/services/: tavily_service.py  vector_store.py
backend/app/tests/: README.md  __init__.py  test_agentic_system.ipynb  test_bm25_retriever.py  test_check_vectorstore.py  test_langgraph.py  test_modular.py  test_notebook_parser.py  test_retrievers.py  test_semantic_chunking.py
backend/eval/: EVAL_README.md  GOLDEN_DATASET_GUIDE.md  custom_retrieval_metrics.py  evaluate_golden_with_ragas.py  evaluate_rag_performance.py  plot_retriever_comparison.py
backend/eval/golden_dataset/: README.md  __init__.py  config.py  convert_to_csv.py  generate_ragas_datasets.py  (+5 more)
(+73 files in other folders)
