[project]
name = "research-paper-reviewer"
version = "0.1.0"
description = "AI-powered research paper peer review system using LangGraph"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.1",
    "langchain>=0.3.7",
    "langchain-openai>=0.2.6",
    "langchain-community>=0.3.5",
    "langchain-cohere>=0.3.8",
    "langgraph>=0.2.45",
    "qdrant-client>=1.12.0",
    "cohere>=5.13.4",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "pymupdf>=1.24.0",
    "sentence-transformers>=3.2.1",
    "python-dotenv>=1.0.1",
    "aiofiles>=24.1.0",
    "ipykernel>=7.0.1",
    "pip>=25.2",
    "ragas>=0.1.0",
    "datasets>=2.14.0",
    "tavily-python>=0.5.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "langchain-experimental>=0.0.68",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
